feat: Implement core device management and plugin architecture
- Added DeviceFactory for creating devices from discovery and database records.
- Introduced DeviceManager to manage device states, commands, and synchronization.
- Developed PluginManager to dynamically discover and register plugins for various brands.
- Created base classes for device profiles and states to standardize device interactions.
- Implemented LG plugin for managing LG devices, including discovery and state management.
- Established a HAP service for HomeKit integration, allowing accessories to be added to the bridge.
- Added initial models for LG devices, including washers with detailed property and state management.
- Set up database repository structure for future device data persistence.
- Included requirements.txt for necessary dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,28 @@
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
 # User-specific files
+.git/
+.env
+.venv
+.qodo
+tests/
+*.log
+__pycache__/
+*.pyc
+.vscode/
+.github
+.gitignore
+.smarthome
+compose.yaml
+hap_config.json
+hap_state.jsom
+miscript.service
+readme.md
+respuesta_estados.json
+runme.sh
+washer.json
+
+
 *.rsuser
 *.suo
 *.user
