--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -82,10 +82,9 @@ jobs:
       - name: Desplegar en el servidor remoto
         run: |
           ssh -p $SSH_PORT -i ~/.ssh/raspberryremoto $SSH_USERNAME@$SSH_SERVERIP << 'EOF'
-            cd public
-            docker compose -f compose.yaml down
+            docker compose -f ~/public/compose.yaml down
             docker pull arturocabb/testspersonales:controlSmartHome
-            docker compose -f compose.yaml pull
-            docker compose -f compose.yaml up -d
+            docker compose -f ~/public/compose.yaml pull
+            docker compose -f ~/public/compose.yaml up -d
           EOF
           
