--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -88,6 +88,7 @@ jobs:
           ssh -p $SSH_PORT -i ~/.ssh/raspberryremoto $SSH_USERNAME@$SSH_SERVERIP "export username='$username' export password='$password'" << 'EOF'
             docker compose -f ~/public/compose.yaml down
             docker login -u $username -p $password
+            docker info | grep Username
             docker pull arturocabb/testspersonales:controlSmartHome
             docker compose -f ~/public/compose.yaml pull
             docker compose -f ~/public/compose.yaml up -d
