--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -85,10 +85,13 @@ jobs:
           $SSH_USERNAME@$SSH_SERVERIP:/home/remoto/public/compose.yaml
       - name: Desplegar en el servidor remoto
         run: |
-          ssh -p $SSH_PORT -i ~/.ssh/raspberryremoto $SSH_USERNAME@$SSH_SERVERIP << 'EOF'
-            docker compose -f ~/public/compose.yaml down
-            docker pull arturocabb/testspersonales:controlSmartHome
-            docker compose -f ~/public/compose.yaml pull
-            docker compose -f ~/public/compose.yaml up -d
-          EOF
+          ssh -o StrictHostKeyChecking=no -p $SSH_PORT -i ~/.ssh/raspberryremoto $SSH_USERNAME@$SSH_SERVERIP "
+            docker login -u $username -p $password &&
+            docker pull arturocabb/testspersonales:controlSmartHome &&
+            docker compose -f ~/public/compose.yaml down &&
+            docker pull arturocabb/testspersonales:controlSmartHome &&
+            docker compose -f ~/public/compose.yaml pull &&
+            docker compose -f ~/public/compose.yaml up -d &&
+            docker logout
+          "
           
