--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -86,7 +86,7 @@ jobs:
       - name: Desplegar en el servidor remoto
         run: |
           ssh -o StrictHostKeyChecking=no -p $SSH_PORT -i ~/.ssh/raspberryremoto $SSH_USERNAME@$SSH_SERVERIP "
-            docker login -u $username -p $password &&
+            docker login -u '$username' -p '$password' &&
             docker pull arturocabb/testspersonales:controlSmartHome &&
             docker compose -f ~/public/compose.yaml down &&
             docker pull arturocabb/testspersonales:controlSmartHome &&
@@ -95,3 +95,4 @@ jobs:
             docker logout
           "
           
+
